fix height/width to prevent scrollbars

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+  height: 100vh;
+  overflow: hidden;
   color: CanvasText;
   background-color: Canvas;
 
@@ -10,8 +12,8 @@ body {
   flex-direction: column;
   justify-content: center;
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   gap: 1rem;
 }
